name:                sample
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             MIT
license-file:        LICENSE
-- author:
-- maintainer:
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable sample
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       
      base >=4.14 && <4.15,
      haskell-say ^>=1.0.0.0,
  -- hs-source-dirs:
  default-language:    Haskell2010
