name:                sample
version:             0.1.0.0
license:             MIT
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable sample
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       
      base >=4.14 && <4.15,
      haskell-say >=1.0.0.0
